# spacelice

./: CMakeLists.txt  README.md
src/: MeshViewerWidget.h  MeshViewerWidgetT.cpp  MeshViewerWidgetT.h  QGLViewerWidget.cpp  QGLViewerWidget.h  QtViewer.pro  SpectralViewer.h  main.cpp  meshviewer.cpp
src2/: main.cpp
src2/QtViewer/: MeshViewerWidget.hh  MeshViewerWidgetT.cc  MeshViewerWidgetT.hh  QGLViewerWidget.cc  QGLViewerWidget.hh
